Adds Box with some words

--- a/Test Keyboard(CHATGPT)/index.html
+++ b/Test Keyboard(CHATGPT)/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <h1>Virtual Keyboard</h1>
 
-    <!-- Use a textarea for larger text display -->
+    <!-- Display the word and input field -->
+    <div id="Word" class="word-display">Word</div>
     <textarea id="inputField" placeholder="Click here to type" readonly></textarea>
 
+    <!-- Virtual keyboard -->
     <div id="keyboard" class="keyboard">
-        <!-- Alphabet -->
         <button class="key">Q</button>
         <button class="key">W</button>
         <button class="key">E</button>
