--- a/Test Keyboard(CHATGPT)/index.html
+++ b/Test Keyboard(CHATGPT)/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Keyboard</title>
     <link rel="stylesheet" href="styles.css">
@@ -14,38 +15,107 @@
     <textarea id="inputField" placeholder="Click here to type" readonly></textarea>
 
     <!-- Virtual keyboard -->
-    <div id="keyboard" class="keyboard">
-        <button class="key">Q</button>
-        <button class="key">W</button>
-        <button class="key">E</button>
-        <button class="key">R</button>
-        <button class="key">T</button>
-        <button class="key">Y</button>
-        <button class="key">U</button>
-        <button class="key">I</button>
-        <button class="key">O</button>
-        <button class="key">P</button>
-        <br>
-        <button class="key">A</button>
-        <button class="key">S</button>
-        <button class="key">D</button>
-        <button class="key">F</button>
-        <button class="key">G</button>
-        <button class="key">H</button>
-        <button class="key">J</button>
-        <button class="key">K</button>
-        <button class="key">L</button>
-        <br>
-        <button class="key">Z</button>
-        <button class="key">X</button>
-        <button class="key">C</button>
-        <button class="key">V</button>
-        <button class="key">B</button>
-        <button class="key">N</button>
-        <button class="key">M</button>
-        <br>
-        <button class="key" id="backspace">⌫</button>
-        <button class="key" id="space">␣</button>
+    <div>
+        <div id="functionbar">
+            <ul class="keys">
+                <li id="esc">esc</li>
+                <div id="spacing">
+                    <li>F1</li>
+                    <li>F2</li>
+                    <li>F3</li>
+                    <li>F4</li>
+                </div>
+                <div id="spacing">
+                    <li>F5</li>
+                    <li>F6</li>
+                    <li>F7</li>
+                    <li>F8</li>
+                </div>
+                <div id="spacing">
+                    <li>F9</li>
+                    <li>F10</li>
+                    <li>F11</li>
+                    <li>F12</li>
+                </div>
+                <li id="del">del</li>
+            </ul>
+        </div>
+        <div id="keyboard">
+            <ul class="keys">
+                <li class="key" >`</li>
+                <li class="key" >1</li>
+                <li class="key" >2</li>
+                <li class="key" >3</li>
+                <li class="key" >4</li>
+                <li class="key" >5</li>
+                <li class="key" >6</li>
+                <li class="key" >7</li>
+                <li class="key" >8</li>
+                <li class="key" >9</li>
+                <li class="key" >0</li>
+                <li class="key" >_</li>
+                <li class="key" >=</li>
+                <li id="backspace">backspace</li>
+            </ul>
+            <ul class="keys">
+                <li  class="key" id="tab">tab</li>
+                <li  class="key" >Q</li>
+                <li  class="key" >W</li>
+                <li  class="key" >E</li>
+                <li class="key" >R</li>
+                <li class="key" >T</li>
+                <li class="key" >Y</li>
+                <li class="key" >U</li>
+                <li class="key" >I</li>
+                <li class="key" >O</li>
+                <li class="key" >P</li>
+                <li class="key" >[</li>
+                <li class="key" >]</li>
+                <li class="key" id="slash">\</li>
+            </ul>
+            <ul class="keys">
+                <li id="capslock">caps lock</li>
+                <li class="key" >A</li>
+                <li class="key" >S</li>
+                <li class="key" >D</li>
+                <li class="key" >F</li>
+                <li class="key" >G</li>
+                <li class="key" >H</li>
+                <li class="key" >J</li>
+                <li class="key" >K</li>
+                <li class="key" >L</li>
+                <li class="key" >;</li>
+                <li class="key" >'</li>
+                <li id="enter">enter</li>
+            </ul>
+            <ul class="keys">
+                <li class="key"  id="shift">shift</li>
+                <li class="key" >Z</li>
+                <li class="key" >X</li>
+                <li class="key" >C</li>
+                <li class="key" >V</li>
+                <li class="key" >B</li>
+                <li class="key" >N</li>
+                <li class="key" >M</li>
+                <li class="key" >,</li>
+                <li class="key" >.</li>
+                <li class="key" >/</li>
+                <li id="shift">shift</li>
+                <li id="up">↑</li>
+            </ul>
+            <ul class="keys">
+                <li id="one">ctrl</li>
+                <li id="one">fn</li>
+                <li id="one">alt</li>
+                <li id="space"></li>
+                <li id="one">alt</li>
+                <li id="one">fn</li>
+                <li id="one">ctrl</li>
+                <li id="left">←</li>
+                <li id="down">↓</li>
+                <li id="right">→</li>
+            </ul>
+        </div>
     </div>
 
     <script src="script.js"></script>
