Add capslock button

--- a/Test Keyboard(CHATGPT)/index.html
+++ b/Test Keyboard(CHATGPT)/index.html
@@ -74,7 +74,7 @@
                 <li class="key" id="slash">\</li>
             </ul>
             <ul class="keys">
-                <li id="capslock">caps lock</li>
+                <li class="key" id="capslock">caps lock</li>
                 <li class="key" >A</li>
                 <li class="key" >S</li>
                 <li class="key" >D</li>
