Made the caps and enter, I think thats all the important keys

--- a/Test Keyboard(CHATGPT)/index.html
+++ b/Test Keyboard(CHATGPT)/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Virtual Keyboard</h1>
-
+    <h2 id="errmes"></h2>
     <!-- Display the word and input field -->
     <div id="Word" class="word-display">Word</div>
     <textarea id="inputField" placeholder="Click here to type" readonly></textarea>
